# orbital-simulator

./: Cargo.toml  LICENSE  README.md  go.mod
loader/: Cargo.toml
loader/src/: builder.rs  deserialize.rs  lib.rs  prefabs.rs
loader/src/builder/: asteroids_builder.rs  locus.rs  mod.rs  moons_builder.rs  orbiter.rs
simulator/: Cargo.toml
simulator/src/: bodies.rs  lib.rs
systems/: collision_test.json5  different_orbital_shapes.json5  ours.json5
viewer/: Cargo.toml
viewer/src/: main.rs  state.rs
