[package]
name = "loader"
version = "0.1.0"
authors = ["gamma-delta"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simulator = { path = "../simulator" }
euclid = { version = "0.20.10", features = ["serde"] }
json5 = "0.2.7"
serde = { version = "1.0.106", features = ["derive"] }
typetag = "0.1.4" # Let me serde trait objects
lazy_static = "1.2.0"
rand = { version = "0.7.3", features = [ "small_rng" ] } # For building random moons
rand_distr = "0.2.2" # Assists rand, for the distribution of mass in asteroids