[package]
name = "viewer"
version = "0.1.0"
authors = ["gamma-delta"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"simulator" = { path = "../simulator"}
"loader" = { path = "../loader" }
euclid = "0.20.10"
"ggez" = "0.5.1"